# pi_inf442

./: .gitignore  CMakeLists.txt  README.md  setup.py
datasets/: aws.sh  eng.testa_tokens_regex.pt  eng.train_tokens_regex.pt  portuguese.test  portuguese.train  results.txt
kaggle_notebook/: token_classification.ipynb  token_generator.ipynb
models/: regex_model.pt
scripts/: Custom_Analyzer.cpp  Knn_Analyzer.cpp  Knn_KEstimator.cpp  LinearRegressionAnalizer.cpp  LinearRegression_Analizer.cpp  LogisticRegression_Analizer.cpp  OVRClassifier_Analizer.cpp  Random_Analyzer.cpp  knnClassificator.cpp
scripts_python/: CsvToNpy.py  GenerateRegexTokens.py  LogisticRegression_Analyser.py  TrainRegexNetwork.py  VerifyReegxNetwork.py  VerifyRegexNetwork.py  regex_network.sh
src/: Analyzer.cpp  Analyzer.h  Class.cpp  Class.h  Classificator.cpp  Classificator.h  Classifier.cpp  Classifier.h  Dataset.cpp  Dataset.h  KnnClassifier.cpp  KnnClassifier.h  KnnKEstimator.cpp  KnnKEstimator.h  LinearRegression.cpp  LinearRegression.h  LogisticRegression.cpp  LogisticRegression.h  OVRClassifier.cpp  OVRClassifier.h  RandomClassificator.cpp  RandomClassificator.h  RandomClassifier.cpp  RandomClassifier.h  Token.cpp  Token.h
src_python/: Dataset.py  ModuleRegex.py  RegexTokenizer.py
